--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Click==7.0
-Flask==1.1.1
-gunicorn==20.0.4
+Flask~>2.2.5
+gunicorn~>22.0.4
 itsdangerous==1.1.0
-Jinja2==2.10.3
+Jinja2~>3.1.4
 MarkupSafe==1.1.1
 python-chess==0.29.0
-Werkzeug==0.16.0
+Werkzeug~>2.3.8
